# Swarm-Robotics-Formation-Control

./: .clang-format  .gitignore  CMakeLists.txt  README.md
controllers/: CMakeLists.txt
controllers/footbot_diffusion_rx/: CMakeLists.txt  footbot_diffusion_rx.cpp  footbot_diffusion_rx.h
controllers/footbot_diffusion_tx/: CMakeLists.txt  footbot_diffusion_tx.cpp  footbot_diffusion_tx.h
embedding/: CMakeLists.txt
experiments/: multiple_engines.argos  obstacles.argos  obstacles_curve.argos  obstacles_square.argos  test.argos  test_1.argos  test_1_c.argos  test_2.argos  test_2_c.argos  test_3.argos  test_3_c.argos  test_tunel.argos  tunel.argos
loop_functions/: CMakeLists.txt
src/plugins/simulator/physics_engines/dynamics2d/: dynamics2d_single_body_object_model.h
src/testing/unit/: test-cylinder.cpp
